--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:8889/letenkovac
 spring.datasource.username=root
 spring.datasource.password=
+server.error.whitelabel.enabled=false
