--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>vue</artifactId>
             <version>2.5.16</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>vue-resource</artifactId>
+            <version>0.9.3</version>
+        </dependency>
     </dependencies>
 
     <properties>
